2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #1969436.
	* include/avr/iom32u4.h (SPM_PAGESIZE): Fix size to be 128.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2012448.
	* include/avr/iom6450.h (USART0_RX_vect, USART0_UDRE_vect, 
	USART_TX_vect): Add interrupt names as aliases.
	* include/avr/iom3250.h: Ditto.
	* include/avr/iom165.h (USART_RX_vect, USART_UDRE_vect, USART_TX_vect):
	Add interrupt names as aliases.
	* include/avr/iom165p.h: Ditto.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2010688.
	* include/avr/iotn48.h (WCOL, SPIF): Fix values of bit definitions 
	for SPSR.
	Fix bit definitions for MCUCR, SPMCSR, PRR, PCMSK3, PCMSK1.
	* include/avr/iotn88.h: Add assembler guard for ADC definition. Define
	ADCW.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2016128.
	* include/avr/iom32m1.h (CAN_TOVF_vect): Add missing underscore in 
	definition.
	* include/avr/iom32c1.h (OCR1A): Fix address to be 0x88.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn13a.h (PRR): Change address of PRR register to 0x25.

2008-07-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23850.
	* include/avr/iom8.h (MCUSR): Defined as an alias for MCUCSR.

2008-07-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2018957.
	* include/avr/iom1284p.h (SPM_PAGESIZE): Fix value to 256.

2008-07-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23871.
	* include/avr/power.h: Enable clock_prescale_set() macro for ATmega32U4
	and ATmega32C1.
	* NEWS: Add to fixed bug list.

2008-07-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_regbind): Fix a typo.

2008-06-25  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn13a.h: Fix idempotent guard.
