@@ -7,6 +7,7 @@
   [sourceforge.net: #1883630] ATmegaXX4 - USART0 and USART1 additional bits aliases
   [sourceforge.net: #1910885] Typo in io90pwm3b.h
   [sourceforge.net: #1913681] Missing INT3 define in io90pwm3b.h
+  [sourceforge.net: #1957780] New 'FUSES-support' gives error in c++ files
   [sourceforge.net: #1969436] Wrong flash size for ATmega32U4
   [sourceforge.net: #2010688] ATtiny48 SPSR register bits
   [sourceforge.net: #2012448] ATmega6450 USART Interrupts
